# InternDeveloperTest

./: README.md  docker-compose.yml
backend/: .env  pyproject.toml  requirements.txt
backend/api/: .env  Dockerfile  requirements.txt
backend/api/src/: config.py  main.py  routes.py
backend/api/src/auth/config/: __init__.py  config.py
backend/api/src/auth/dependencies/: auth.py
backend/api/src/auth/models/: user.py
backend/api/src/auth/repositories/: user.py
backend/api/src/auth/routes/: auth.py
backend/api/src/auth/schemas/: user.py
backend/api/src/auth/services/: user.py
backend/api/src/books_library/models/: book.py  reader.py
backend/api/src/books_library/repositories/: __init__.py  book.py  reader.py
backend/api/src/books_library/repostories/: reader.py
backend/api/src/books_library/routes/: __init__.py  book.py  reader.py
backend/api/src/books_library/schemas/: book.py  reader.py
backend/api/src/books_library/services/: __init__.py  book.py  reader.py
backend/api/src/database/: db.py
backend/api/src/tests/: auth_test.py  books_test.py  conftest.py  pytest.ini  test_db.py
backend/src/: config.py  main.py
backend/src/books_library/models/: __init__.py  books.py  readers.py
backend/src/books_library/repostories/: book.py  reader.py
backend/src/books_library/schemas/: book.py
backend/src/database/: db.py
