[project]
name = "interndeveloperproject"
version = "0.01"
description = "Проект , использующийся в качестве тестового задания"
authors = [
    {name = "petr.ishimov@outlook.com"}
]
license = {text = "Без лицензии"}
readme = "README.md"
requires-python = "3.10.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "uvicorn[all] (>=0.34.2,<0.35.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "authx (>=1.4.2,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
